--- a/example/manageMaster/my-project/.editorconfig
+++ b/example/manageMaster/my-project/.editorconfig
@@ -8,3 +8,5 @@ tab_size = 4
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+# vscode 请安装 EditorConfig for VS Code
