--- a/example/manageMaster/my-project/package.json
+++ b/example/manageMaster/my-project/package.json
@@ -38,11 +38,13 @@
         "cross-spawn": "^5.0.1",
         "css-loader": "^0.28.0",
         "eslint": "^4.15.0",
+        "eslint-config-prettier": "^4.1.0",
         "eslint-config-standard": "^10.2.1",
         "eslint-friendly-formatter": "^3.0.0",
         "eslint-loader": "^1.7.1",
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-node": "^5.2.0",
+        "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-promise": "^3.4.0",
         "eslint-plugin-standard": "^3.0.1",
         "eslint-plugin-vue": "^4.0.0",
@@ -60,6 +62,7 @@
         "postcss-import": "^11.0.0",
         "postcss-loader": "^2.0.8",
         "postcss-url": "^7.2.1",
+        "prettier": "1.17.0",
         "rimraf": "^2.6.0",
         "selenium-server": "^3.0.1",
         "semver": "^5.3.0",
