--- a/example/manageMaster/my-project/package.json
+++ b/example/manageMaster/my-project/package.json
@@ -37,12 +37,15 @@
         "copy-webpack-plugin": "^4.0.1",
         "cross-spawn": "^5.0.1",
         "css-loader": "^0.28.0",
-        "eslint": "^4.15.0",
+        "eslint": "^5.3.0",
+        "eslint-config-airbnb-base": "^13.1.0",
+        "eslint-config-prettier": "^4.2.0",
         "eslint-config-standard": "^10.2.1",
         "eslint-friendly-formatter": "^3.0.0",
         "eslint-loader": "^1.7.1",
-        "eslint-plugin-import": "^2.7.0",
+        "eslint-plugin-import": "^2.14.0",
         "eslint-plugin-node": "^5.2.0",
+        "eslint-plugin-prettier": "^3.0.1",
         "eslint-plugin-promise": "^3.4.0",
         "eslint-plugin-standard": "^3.0.1",
         "eslint-plugin-vue": "^4.0.0",
@@ -60,6 +63,8 @@
         "postcss-import": "^11.0.0",
         "postcss-loader": "^2.0.8",
         "postcss-url": "^7.2.1",
+        "prettier": "^1.17.0",
+        "prettier-eslint-cli": "^4.7.1",
         "rimraf": "^2.6.0",
         "selenium-server": "^3.0.1",
         "semver": "^5.3.0",
@@ -71,6 +76,7 @@
         "vue-style-loader": "^3.0.1",
         "vue-template-compiler": "^2.5.2",
         "webpack": "^3.6.0",
+        "webpack-api-mocker": "^1.6.6",
         "webpack-bundle-analyzer": "^2.9.0",
         "webpack-dev-server": "^2.9.1",
         "webpack-merge": "^4.1.0"
