--- a/example/manageMaster/my-project/package.json
+++ b/example/manageMaster/my-project/package.json
@@ -10,10 +10,11 @@
         "unit": "jest --config test/unit/jest.conf.js --coverage",
         "e2e": "node test/e2e/runner.js",
         "test": "npm run unit && npm run e2e",
-        "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
+        "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs --fix",
         "build": "node build/build.js"
     },
     "dependencies": {
+        "prettier-eslint": "^8.8.2",
         "vue": "^2.5.2",
         "vue-router": "^3.0.1"
     },
@@ -39,7 +40,7 @@
         "css-loader": "^0.28.0",
         "eslint": "^5.3.0",
         "eslint-config-airbnb-base": "^13.1.0",
-        "eslint-config-prettier": "^4.2.0",
+        "eslint-config-prettier": "^4.3.0",
         "eslint-config-standard": "^10.2.1",
         "eslint-friendly-formatter": "^3.0.0",
         "eslint-loader": "^1.7.1",
